[package]
authors = ["Daan Sprenkels <daan@dsprenkels.com>"]
categories = ["cryptography"]
description = "Shamir secret sharing library for Rust"
documentation = "https://docs.rs/shamirsecretsharing"
license = "MIT"
name = "shamirsecretsharing"
repository = "https://github.com/dsprenkels/sss-rs"
version = "0.1.4"

[badges]
maintenance = {status = "passively-maintained"}
travis-ci = {repository = "dsprenkels/sss-rs", branch = "master"}

[features]
have_libsodium = []

[dependencies]
libc = "0.2.0"
rand = "0.7"

[dev-dependencies]
chacha20-poly1305-aead = "0.1"

[build-dependencies]
cc = "1.0"
