[package]
authors = ["Daan Sprenkels <daan@dsprenkels.com>"]
categories = ["cryptography"]
description = "Shamir secret sharing library for Rust"
documentation = "https://docs.rs/shamirsecretsharing"
license = "MIT"
name = "shamirsecretsharing"
repository = "https://github.com/dsprenkels/sss-rs"
version = "0.1.4"

[badges]
maintenance = {status = "passively-maintained"}
travis-ci = {repository = "dsprenkels/sss-rs", branch = "master"}

[features]
# DEPRECATED: There is a version of libsodium linked in.  This feature flag does not do
# anything at the moment, and will be removed in version 0.2.
have_libsodium = []

[dependencies]
rand = "0.8"
xsalsa20poly1305 = "0.6"

[dev-dependencies]
chacha20-poly1305-aead = "0.1"

[build-dependencies]
cc = "1.0"
