[package]
categories = ["cryptography"]
description = "Shamir secret sharing library for Rust"
documentation = "https://docs.rs/shamirsecretsharing"
license = "MIT"
name = "shamirsecretsharing"
repository = "https://github.com/dsprenkels/sss-rs"
version = "0.1.7"

[badges]
maintenance = {status = "passively-maintained"}
travis-ci = {repository = "dsprenkels/sss-rs", branch = "master"}

[features]
# DEPRECATED: There is a version of libsodium linked in.  This feature flag does not do
# anything at the moment, and will be removed in version 0.2.
have_libsodium = []

[dependencies]
rand = "0.8.5"
crypto_secretbox = { version = "0.1", default-features = false, features = ["salsa20", "alloc"] }

[dev-dependencies]
chacha20-poly1305-aead = "0.1"
